--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "autoprefixer": "^10.4.13",
+    "jquery": "^3.6.1",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
