--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "apexcharts": "^3.36.3",
+    "firebase": "^9.15.0",
     "heroicons": "^2.0.13",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
