--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.9",
     "apexcharts": "^3.36.3",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.3.0",
     "heroicons": "^2.0.13",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -22,11 +23,16 @@
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,9 +54,22 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.13",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "jquery": "^3.6.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.2.4",
+    "url": "^0.11.0",
+    "webpack-cli": "^5.0.1"
   }
 }
